# proximie-action-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: aws_architecture.dot  aws_architecture.md  submission_checklist.md  technical_architecture_report.docx
scripts/: analyze_mock_errors.py  evaluate_mock.py  inspect_mock_data.py  train_mock.py  validate_pipeline.py  visualize_timeline.py
src/action_segmentation/: __init__.py  cli.py  config.py  error_cli.py  logging_utils.py  pipeline.py  seed.py  training_cli.py  validation_cli.py  visualization_cli.py
src/action_segmentation/data/: __init__.py  dataset.py  ingestion.py  synthetic.py
src/action_segmentation/evaluation/: __init__.py  error_analysis.py  evaluator.py  frame_metrics.py  product_metrics.py  segment_metrics.py
src/action_segmentation/models/: __init__.py  fusion.py  temporal_tcn.py
src/action_segmentation/postprocessing/: __init__.py  timeline.py
src/action_segmentation/training/: __init__.py  losses.py  trainer.py
src/action_segmentation/visualization/: __init__.py  timeline_plot.py
src/proximie_action_segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_error_analysis.py  test_evaluator.py  test_frame_metrics.py  test_fusion.py  test_ingestion.py  test_losses.py  test_pipeline.py  test_product_metrics.py  test_seed.py  test_segment_metrics.py  test_synthetic_data.py  test_temporal_tcn.py  test_timeline.py  test_timeline_visualization.py  test_trainer.py
